5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4477/executions/1747_1540.log
== TEST (2019-05-16 10:08:49) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**2/(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**2/(2*i)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:09:47) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**2/(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**2/(2*i)
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:13) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + sinal * x**2/(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:54) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + sinal * x**2/factorial 2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + sinal * x**2/factorial 2*i
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:10:57) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + sinal * x**2/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:11:20) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + sinal * x**2/factorial2 *i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:11) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + sinal * x**i/factorial 2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + sinal * x**i/factorial 2*i
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:16) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:15) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + 1 + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:57) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x >= k-1):
	soma = soma + 1 + sinal * x**i/factorial2*i+1
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:19) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorial2*i
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:48) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorialx*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorialx*i
NameError: name 'factorialx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:22) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorialx + 2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorialx + 2*i
NameError: name 'factorialx' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:25) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma1 + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma1 + sinal * x**i/factorial2*i
NameError: name 'soma1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:47) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma 1 + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma 1 + sinal * x**i/factorial2*i
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:56) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma 1+ sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma 1+ sinal * x**i/factorial2*i
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:24:06) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- EXECUTION TIME:
0.179428
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1747/1540/main.py", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorial2*i
NameError: name 'factorial2' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:24:07) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorial2*i
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorial2*i
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:24:52) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/2factorial
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + 1 + sinal * x**i/2factorial
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:12) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/2 *factorial
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/2 *factorial
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:15) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/2 * factorial
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/2 * factorial
TypeError: unsupported operand type(s) for *: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:42) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/2 + factorial
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/2 + factorial
TypeError: unsupported operand type(s) for +: 'float' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:58) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/2 factorial
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + 1 + sinal * x**i/2 factorial
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:25) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/xfactorial
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/xfactorial
NameError: name 'xfactorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:46) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/xfactorial(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/xfactorial(2*i)
NameError: name 'xfactorial' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:57) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorial(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorial(2*i)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:22) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/2factorial+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + 1 + sinal * x**i/2factorial+(2*i)
                                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:35) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:34:47) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + 1 + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + 1 + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:35:45) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:10) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:26) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:53) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/2 * factorial2(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/2 * factorial2(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:07) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/2 * factorial(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/2 * factorial(2*i)
OverflowError: int too large to convert to float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:25) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/2factorial(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + sinal * x**i/2factorial(2*i)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:36) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/2factorial+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 + soma, 6))
-- ERROR:
File "XXXX", line 11
    soma = soma + sinal * x**i/2factorial+(2*i)
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:38:47) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:39:01) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2+(2*i)
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2+(2*i)
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:40:24) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2
	sinal = -sinal
	i = i+1
#saida
print(round(1 - soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:40:47) 
-- CODE:
from math import *
# Entradas
x = eval(input("Determine x: "))
k = int(input("Determine k: "))
# Variavel
soma = 0
i = 0
sinal = -1
# laco
while (x <= k-1):
	soma = soma + sinal * x**i/factorial2 - 1
	sinal = -sinal
	i = i+1
#saida
print(round(soma, 6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sinal * x**i/factorial2 - 1
NameError: name 'factorial2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
